updated styles in index.html

--- a/index.html
+++ b/index.html
@@ -91,14 +91,15 @@
 
   <!-- footer-start -->
 
-  <div class="bottom-container mb-auto">
+  <div class="bottom-container">
     <i class="fab fa-linkedin"></i>
-    <a class="footer-link" href="https://www.linkedin.com/in/sachin-singh-lodhi">LinkedIn</a>
+    <a class="footer-link text-decoration-none" href="https://www.linkedin.com/in/sachin-singh-lodhi">LinkedIn</a>
     <i class="fab fa-twitter-square"></i>
-    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <a class="footer-link text-decoration-none" href="https://twitter.com/">Twitter</a>
     <i class="fab fa-linkedin"></i>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <a class="footer-link text-decoration-none" href="https://www.appbrewery.co/">Website</a>
     <p>© 2019 UIT.</p>
+    <br>
   </div>
 
   <!-- footer-end -->
