--- a/register.html
+++ b/register.html
@@ -25,8 +25,8 @@
   <link rel="stylesheet" href="css/style2.css">
 </head>
 
-<body>
-  <div class="regform">
+<body class = "bg">
+  <div class="regform container">
     <h1>CodeAdept 3.0 Registration</h1>
     <form class="form-class" onsubmit="return postToGoogle()" id="form" target="_self" action="https://docs.google.com/forms/d/e/1FAIpQLScKOQV96S3wK2S5GaeKiLtQ6Drsx00e4xNvum2Bwe4N2SQQ6g/formResponse" target="_self" id = "mG61Hd"  method = "POST" autocomplete="off">
       <div class="form-group">
@@ -56,7 +56,7 @@
       </div>
       <div class="form-group">
         <label for="year">Select Year</label>
-        <select id="year" placeholder="Select Year" required name = "entry.1446548821">
+        <select id="year" placeholder="Select Year"  class = "rounded pl-3 ml-3" required name = "entry.1446548821">
           <option value="Year: 1st">First Year</option>
           <option value="Year: 2nd">Second Year</option>
           <option value="Year: 3rd">Third Year</option>
@@ -70,8 +70,8 @@
         <span id="mobile-small" class="form-text text-danger"></span>
       </div>
       <div class="form-group">
-        <button class=" btn btn-lg mt-3 btn-outline-success" type="submit" id="submit">Submit</button>
-        <a class=" btn btn-lg mt-3 btn-outline-success" href="index.html">Back</a>
+        <button class=" btn btn-lg mt-3 btn-outline-primary" type="submit" id="submit">Submit</button>
+        <a class=" btn btn-lg mt-3 btn-outline-primary" href="index.html">Back</a>
       </div>
     </form>
     <div id="success-msg">
