--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>CodeAdept 3.0</title>
-
+  <title>CodeAdept3.0</title>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
@@ -20,89 +19,78 @@
   <!-- Google fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu&display=swap" rel="stylesheet">
   <!--font-family: 'Ubuntu', sans-serif;
-    font-family: 'Montserrat', sans-serif;
-    -->
+  font-family: 'Montserrat', sans-serif;
+  -->
 
-  <!-- CSS Style Sheet -->
+  <!-- external css -->
   <link rel="stylesheet" href="css/styles.css">
 
   <!--font-awesome-css-->
   <script src="https://kit.fontawesome.com/f6f7704e20.js"></script>
 
+
 </head>
 
-<body class="bg">
+<body class = "bg">
+  <nav class = "nav-class navbar navbar-expand-lg">
+    <h1 class = "navbar-brand">CodeAdept 3.0</h1>
 
-  <!-- navigation start-->
-
-  <section class="container p-5">
-
-    <nav class="navbar navbar-expand-lg">
-      <a class="navbar-brand" href="" style="font-weight: bold;color: white;font-size: 1.5rem;">CodeAdept 3.0</a>
-      <button class="navbar-toggler fas fa-align-justify" style = "text-align: center;height:40px;width:40px;background-color:white;" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item mx-2">
-            <a class="btn-light nav-link btn-lg btn-blue" href="#">HOME</a>
-          </li>
-          <li class="nav-item mx-2">
-            <a class="btn-light nav-link  btn-lg btn-blue" href="#">CONTACT</a>
-          </li>
-          <li class="nav-item mx-2">
-            <a class="btn-light nav-link  btn-lg btn-blue" href="register.html">REGISTER</a>
-          </li>
-          <li class="nav-item mx-2">
-            <a class="btn-light nav-link  btn-lg btn-blue" href="#">ADEPT'19</a>
-          </li>
-          <li class="nav-item mx-2">
-            <a class="btn-light nav-link  btn-lg btn-blue" href="#">TEAM</a>
-          </li>
-        </ul>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <img class = "togglebtn" src="images/hamburgerBtn.png" alt="">
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+      <ul class = "navul navbar-nav ml-auto">
+        <li class = "nav-item nl-class">
+          <a href="#" class = "nav-link">HOME</a>
+        </li>
+        <li class = "nav-item nl-class">
+          <a href="#" class = "nav-link">CONTACT</a>
+        </li>
+        <li class = "nav-item nl-class">
+          <a href="register.html" class = "nav-link">REGISTER</a>
+        </li>
+        <li class = "nav-item nl-class">
+          <a href="#" class = "nav-link">ADEPT'19</a>
+        </li>
+        <li class = "nav-item nl-class lastnl">
+          <a href="#" class = "nav-link">TEAM</a>
+        </li>
+      </ul>
     </div>
-    </nav>
-  </section>
+  </nav>
 
-  <!-- navigation end-->
 
-  <!-- middle-content start -->
+  <!-- middle-content-row -->
+  <div class="middle row text-white m-5 text-center">
+    <div class="col-lg-7 container py-3 left">
+      <div class="bg-secondary py-3 leftcol">
+        <h2 class = "my-4">Annual Coding Competition</h2>
+        <p class = "">CodeAdept 3.0 is the third coding competition that is being organised by Department of Information technology, of UIT-RGPV college.
+        It is organised so that the students can compete on college level and evaluate their logical, reasoning and coding skills.</p>
 
-  <div class="row middle pt-5 container mx-auto">
-    <div class="col-lg-8 col-sm-12 mcontent">
-      <div class="container mcontent-info row">
-        <div class="transbox">
-          <h3>CodeAdept 3.0</h3>
-          <p>CodeAdept is an annual coding competition organised by</p>
-          <p style="margin-bottom: 5%;margin-left: 5%;">
-            Information and Technology Department of UIT-RGPV College.</p>
-        </div>
       </div>
-    </div>
-    <div class="col-lg-3 col-sm-12 logo mr-auto card">
-      <img class = "card-img-top" src="images/codeadeptprofilelogo.png" alt="logo" style = "height: 200px;margin-bottom: 10px;">
-      <h5 class = "card-text" style = "text-align:center;">Get prepared for competiting with other coders!!!</h5>
-      <h5 class = "card-text" style = "text-align:center;">Best of Luck.</h5>
+        </div>
+    <div class="col-lg-5 rightcol">
+      <img src="images/codeadeptprofilelogo.png" alt="">
     </div>
   </div>
-  <br>
-  <br>
-  <!-- middle-content end -->
 
-  <!-- footer-start -->
+  <!-- footer section row -->
+  <div class="footer row text-secondary mx-5 my-3 text-center">
+    <p class = "">CodeAdept 3.0 is the third coding competition that is being organised by Department of Information technology, of UIT-RGPV college.
+    It is organised so that the students can compete on college level and evaluate their logical, reasoning and coding skills.</p>
 
-  <div class="bottom-container">
-    <i class="fab fa-linkedin"></i>
-    <a class="footer-link text-decoration-none" href="https://www.linkedin.com/in/sachin-singh-lodhi">LinkedIn</a>
-    <i class="fab fa-twitter-square"></i>
-    <a class="footer-link text-decoration-none" href="https://twitter.com/">Twitter</a>
-    <i class="fab fa-linkedin"></i>
-    <a class="footer-link text-decoration-none" href="https://www.appbrewery.co/">Website</a>
-    <p>© 2019 UIT.</p>
+  </div>
+  <div class="text-center">
+    <i class="text-primary fab fa-linkedin"></i>
+    <a class="footer-link text-decoration-none" href="#">LinkedIn</a>
+    <i class="text-primary fab fa-twitter-square"></i>
+    <a class="footer-link text-decoration-none" href="#">Twitter</a>
+    <i class="text-primary fab fa-linkedin"></i>
+    <a class="footer-link text-decoration-none" href="#">Website</a>
+    <p class = "font-weight-bold text-secondary">© 2019 UIT.</p>
     <br>
   </div>
-
-  <!-- footer-end -->
 
 
 </body>
