--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <a href="register.html" class = "nav-link">REGISTER</a>
         </li>
         <li class = "nav-item nl-class">
-          <a href="#" class = "nav-link">ADEPT'19</a>
+          <a href="adept19.html" class = "nav-link">ADEPT'19</a>
         </li>
         <li class = "nav-item nl-class lastnl">
           <a href="#" class = "nav-link">TEAM</a>
@@ -67,7 +67,7 @@
         <h2 class = "my-4">Annual Coding Competition</h2>
         <p class = "">CodeAdept 3.0 is the third coding competition that is being organised by Department of Information technology, of UIT-RGPV college.
         It is organised so that the students can compete on college level and evaluate their logical, reasoning and coding skills.</p>
-
+        <a class = "btn btn-lg btn-dark" href="adept19.html">Learn More</a>
       </div>
         </div>
     <div class="col-lg-5 rightcol">
