--- a/index.html
+++ b/index.html
@@ -76,12 +76,10 @@
   </div>
 
   <!-- footer section row -->
-  <div class="footer row text-secondary mx-5 my-3 text-center">
+  <div class="footer row text-secondary mx-5 mt-auto text-center">
     <p class = "">CodeAdept 3.0 is the third coding competition that is being organised by Department of Information technology, of UIT-RGPV college.
     It is organised so that the students can compete on college level and evaluate their logical, reasoning and coding skills.</p>
-
-  </div>
-  <div class="text-center">
+    <div class="text-center">
     <i class="text-primary fab fa-linkedin"></i>
     <a class="footer-link text-decoration-none" href="#">LinkedIn</a>
     <i class="text-primary fab fa-twitter-square"></i>
@@ -91,6 +89,8 @@
     <p class = "font-weight-bold text-secondary">© 2019 UIT.</p>
     <br>
   </div>
+  </div>
+  
 
 
 </body>
