--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <div class="footer row text-secondary mx-5 mt-auto text-center">
     <p class = "">CodeAdept 3.0 is the third coding competition that is being organised by Department of Information technology, of UIT-RGPV college.
     It is organised so that the students can compete on college level and evaluate their logical, reasoning and coding skills.</p>
-    <div class="text-center">
+    <div class="text-center mx-auto">
     <i class="text-primary fab fa-linkedin"></i>
     <a class="footer-link text-decoration-none" href="#">LinkedIn</a>
     <i class="text-primary fab fa-twitter-square"></i>
