--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
           <a href="#" class = "nav-link">HOME</a>
         </li>
         <li class = "nav-item nl-class">
-          <a href="#" class = "nav-link">CONTACT</a>
-        </li>
-        <li class = "nav-item nl-class">
           <a href="register.html" class = "nav-link">REGISTER</a>
         </li>
         <li class = "nav-item nl-class">
-          <a href="adept19.html" class = "nav-link">ADEPT'19</a>
+          <a href="adept18.html" class = "nav-link">ADEPT'18</a>
+        </li>
+        <li class = "nav-item nl-class">
+          <a href="about.html" class = "nav-link">ABOUT</a>
         </li>
         <li class = "nav-item nl-class lastnl">
-          <a href="#" class = "nav-link">TEAM</a>
+          <a href="contact.html" class = "nav-link">CONTACT</a>
         </li>
       </ul>
     </div>
@@ -80,17 +80,17 @@
     <p class = "">CodeAdept 3.0 is the third coding competition that is being organised by Department of Information technology, of UIT-RGPV college.
     It is organised so that the students can compete on college level and evaluate their logical, reasoning and coding skills.</p>
     <div class="text-center mx-auto">
-    <i class="text-primary fab fa-linkedin"></i>
-    <a class="footer-link text-decoration-none" href="#">LinkedIn</a>
-    <i class="text-primary fab fa-twitter-square"></i>
-    <a class="footer-link text-decoration-none" href="#">Twitter</a>
-    <i class="text-primary fab fa-linkedin"></i>
-    <a class="footer-link text-decoration-none" href="#">Website</a>
-    <p class = "font-weight-bold text-secondary">© 2019 UIT.</p>
-    <br>
+      <i class="text-primary fab fa-linkedin"></i>
+      <a class="footer-link text-decoration-none" href="#">LinkedIn</a>
+      <i class="text-primary fab fa-twitter-square"></i>
+      <a class="footer-link text-decoration-none" href="#">Twitter</a>
+      <i class="text-primary fab fa-linkedin"></i>
+      <a class="footer-link text-decoration-none" href="#">Website</a>
+      <p class = "font-weight-bold text-secondary">© 2019 UIT.</p>
+      <br>
+    </div>
   </div>
-  </div>
-  
+
 
 
 </body>
